Source/JavaScriptCore/yarr/yarr.pri
@@ -7,7 +7,8 @@
 SOURCES += \
     $$PWD/YarrInterpreter.cpp \
     $$PWD/YarrPattern.cpp \
-    $$PWD/YarrSyntaxChecker.cpp
+    $$PWD/YarrSyntaxChecker.cpp \
+    $$PWD/YarrCanonicalizeUCS2.cpp
 
 # For UString.h
 v8: INCLUDEPATH += $$PWD/../runtime
